# git_interactive_rebase.py

./: .gitignore  LICENSE  MANIFEST.in  README.md  git_interactive_rebase.py  main.py  pyproject.toml  setup.py
docs/: index.html  screenshots.md  style.css
lib/: app_window.py  dialogs.py  git_helpers.py  utils.py
